# knowledge_graph_versioning

./: README.md
sierralustra_base_core/: sierralustra_demo
sierralustra_base_core/include/sierralustra/: knowledge_graph.hpp
sierralustra_base_core/src/: main.cpp
sierralustra_core/: CMakeLists.txt
sierralustra_core/apps/: CMakeLists.txt  main.cpp
sierralustra_core/include/sierralustra/: knowledge_graph.hpp
sierralustra_core/src/: knowledge_graph.cpp
sierralustra_core/tests/: CMakeLists.txt  graph_tests.cpp
